--- a/index.html
+++ b/index.html
@@ -9,6 +9,37 @@
     <!-- CSS Added -->
     <link rel="stylesheet" href="style.css">
 </head>
+<header>
+    <!-- nav bar start -->
+    <nav class="nav-container">
+        <div>
+            <h2 class="nav-title">G3 Architects</h2>
+        </div>
+        <div class="menu-container">
+            <ul class="menu-items">
+                <li class="menu-item">Home</li>
+                <li class="menu-item">Home</li>
+                <li class="menu-item">About</li>
+                <li class="menu-item">Contact Us</li>
+                <li class="menu-item">Login</li>
+            </ul>
+        </div>
+    </nav>
+    <!-- nav bar end -->
+
+    <!-- Banner Start -->
+    <div class="banner-container">
+        <h1 class="banner-title">
+            Brand New <br> Group of Architects
+        </h1>
+        <p class="banner-info">There are many variations of passages of Lorem Ipsum available, but the majority have
+            <br> suffered alteration in some form, by injected humour, or randomised words which don't look even
+        </p>
+        <button class="banner-btn">Explore More</button>
+        <img class="img-fluid" src="images/banner.png" alt="">
+    </div>
+    <!-- Banner End -->
+</header>
 
 <body>
 
