--- a/index.html
+++ b/index.html
@@ -11,13 +11,12 @@
 </head>
 <header>
     <!-- nav bar start -->
-    <nav class="nav-container">
-        <div>
-            <h2 class="nav-title">G3 Architects</h2>
+    <nav class="nav-container container">
+        <div class="nav-title">
+            <h2>G3 Architects</h2>
         </div>
-        <div class="menu-container">
+        <div class="menu-container container">
             <ul class="menu-items">
-                <li class="menu-item">Home</li>
                 <li class="menu-item">Home</li>
                 <li class="menu-item">About</li>
                 <li class="menu-item">Contact Us</li>
@@ -40,6 +39,26 @@
     </div>
     <!-- Banner End -->
 </header>
+<main>
+    <section class="quick-list-features">
+        <div class="feature">
+            <img src="images/team1.png" alt="">
+            <img src="images/team2.png" alt="">
+            <img src="images/team3.png" alt="">
+            <img src="images/team4.png" alt="">
+        </div>
+        <div class="feature-details">
+            <h3 class="feature-title"><span class="first-part">Quick list</span> <span class="second-part">of Our
+                </span> <br> <span class="third-part">Features</span> </h3>
+            <p class="feature-info">There are many variations of passages of Lorem Ipsum available, <br> but the
+                majority have suffered
+                alteration
+                in some form, by injected <br> humour, or randomised words which don't look even</p>
+            <button class="feature-btn">Explore More</button>
+        </div>
+    </section>
+
+</main>
 
 <body>
 
