--- a/index.html
+++ b/index.html
@@ -39,75 +39,84 @@
     </div>
     <!-- Banner End -->
 </header>
-<main>
-    <section class="quick-list-features">
-        <div class="feature">
-            <img src="images/team1.png" alt="">
-            <img src="images/team2.png" alt="">
-            <img src="images/team3.png" alt="">
-            <img src="images/team4.png" alt="">
-        </div>
-        <div class="feature-details">
-            <h3 class="feature-title"><span class="first-part">Quick list</span> <span class="second-part">of Our
-                </span> <br> <span class="third-part">Features</span> </h3>
-            <p class="feature-info">There are many variations of passages of Lorem Ipsum available, <br> but the
-                majority have suffered
-                alteration
-                in some form, by injected <br> humour, or randomised words which don't look even</p>
-            <button class="feature-btn">Explore More</button>
-        </div>
-    </section>
-    <section class="features-love-enjoy">
-        <div class="features-love-enjoy-details">
-            <h3 class="features-love-enjoy-title">Features you will <br>love & enjoy</h3>
-            <p class="feature-info">There are many variations of passages of Lorem Ipsum available, but the <br>
-                majority have suffered alteration in some form, by injected humour, or <br> randomised words which don't
-                look even</p>
-            <div class="features-love-enjoy-description">
-                <h3 class="features-love-enjoy-description-title">Dexktop & Mobile Version</h3>
-                <p class="features-love-enjoy-info">There are many variations of passages of Lorem Ipsum available, <br>
-                    but the
-                    majority have suffered alteration in some form, by <br> injected humour, or randomised...........
-                </p>
 
-            </div>
-            <div class="features-love-enjoy-description">
-                <h3 class="features-love-enjoy-description-title">Drag & Drop Builder</h3>
-                <p class="features-love-enjoy-info">There are many variations of passages of Lorem Ipsum available, <br>
-                    but the
-                    majority have suffered alteration in some form, by <br> injected humour, or randomised...........
-                </p>
-
-            </div>
-            <div class="features-love-enjoy-description">
-                <h3 class="features-love-enjoy-description-title">Awesome Modern Design</h3>
-                <p class="features-love-enjoy-info">There are many variations of passages of Lorem Ipsum available, <br>
-                    but the
-                    majority have suffered alteration in some form, by <br> injected humour, or randomised...........
-                </p>
-
-            </div>
-            <div class="features-love-enjoy-description">
-                <h3 class="features-love-enjoy-description-title">Super Easy to Edit</h3>
-                <p class="features-love-enjoy-info">There are many variations of passages of Lorem Ipsum available, <br>
-                    but the
-                    majority have suffered alteration in some form, by <br> injected humour, or randomised...........
-                </p>
-
-            </div>
-        </div>
-        <div class="features-love-enjoy-banner">
-            <img src="images/architect.png" alt="">
-            <button class="banner-btn"><span style="font-weight: 700;
-                font-size: 65px;">10+Year</span> <br><span style="font-weight: 500;
-                font-size: 25px;"> Experience</span></button>
-        </div>
-    </section>
-
-</main>
 
 <body>
+    <main>
+        <section class="quick-list-features">
+            <div class="feature">
+                <img src="images/team1.png" alt="">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+                <img src="images/team4.png" alt="">
+            </div>
+            <div class="feature-details">
+                <h3 class="feature-title"><span class="first-part">Quick list</span> <span class="second-part">of Our
+                    </span> <br> <span class="third-part">Features</span> </h3>
+                <p class="feature-info">There are many variations of passages of Lorem Ipsum available, <br> but the
+                    majority have suffered
+                    alteration
+                    in some form, by injected <br> humour, or randomised words which don't look even</p>
+                <button class="feature-btn">Explore More</button>
+            </div>
+        </section>
+        <section class="features-love-enjoy">
+            <div class="features-love-enjoy-details">
+                <h3 class="features-love-enjoy-title">Features you will <br>love & enjoy</h3>
+                <p class="feature-info">There are many variations of passages of Lorem Ipsum available, but the <br>
+                    majority have suffered alteration in some form, by injected humour, or <br> randomised words which
+                    don't
+                    look even</p>
+                <div class="features-love-enjoy-description">
+                    <h3 class="features-love-enjoy-description-title">Dexktop & Mobile Version</h3>
+                    <p class="features-love-enjoy-info">There are many variations of passages of Lorem Ipsum available,
+                        <br>
+                        but the
+                        majority have suffered alteration in some form, by <br> injected humour, or
+                        randomised...........
+                    </p>
 
+                </div>
+                <div class="features-love-enjoy-description">
+                    <h3 class="features-love-enjoy-description-title">Drag & Drop Builder</h3>
+                    <p class="features-love-enjoy-info">There are many variations of passages of Lorem Ipsum available,
+                        <br>
+                        but the
+                        majority have suffered alteration in some form, by <br> injected humour, or
+                        randomised...........
+                    </p>
+
+                </div>
+                <div class="features-love-enjoy-description">
+                    <h3 class="features-love-enjoy-description-title">Awesome Modern Design</h3>
+                    <p class="features-love-enjoy-info">There are many variations of passages of Lorem Ipsum available,
+                        <br>
+                        but the
+                        majority have suffered alteration in some form, by <br> injected humour, or
+                        randomised...........
+                    </p>
+
+                </div>
+                <div class="features-love-enjoy-description">
+                    <h3 class="features-love-enjoy-description-title">Super Easy to Edit</h3>
+                    <p class="features-love-enjoy-info">There are many variations of passages of Lorem Ipsum available,
+                        <br>
+                        but the
+                        majority have suffered alteration in some form, by <br> injected humour, or
+                        randomised...........
+                    </p>
+
+                </div>
+            </div>
+            <div class="features-love-enjoy-banner">
+                <img src="images/architect.png" alt="">
+                <button class="banner-btn"><span style="font-weight: 700;
+                    font-size: 65px;">10+Year</span> <br><span style="font-weight: 500;
+                    font-size: 25px;"> Experience</span></button>
+            </div>
+        </section>
+
+    </main>
 </body>
 
 </html>
