Main section done

--- a/index.html
+++ b/index.html
@@ -115,7 +115,53 @@
                     font-size: 25px;"> Experience</span></button>
             </div>
         </section>
-
+        <section class="some-facts">
+            <div class="some-facts-details">
+                <h3 class="some-facts-details-title">Some Facts</h3>
+                <p class="banner-info">There are many variations of passages of Lorem Ipsum available, but <br> the
+                    majority have suffered
+                    alteration.</p>
+            </div>
+            <div class="facts">
+                <div class="fact">
+                    <img src="images/icons/ribon.png" alt="">
+                    <h3 class="fact-title">54</h3>
+                    <p class="fact-info">Awards Winnings</p>
+                </div>
+                <div class="fact">
+                    <img src="images/icons/projects.png" alt="">
+                    <h3 class="fact-title">1458</h3>
+                    <p class="fact-info">Project Finished</p>
+                </div>
+                <div class="fact">
+                    <img src="images/icons/customers.png" alt="">
+                    <h3 class="fact-title">590</h3>
+                    <p class="fact-info">Clients Worked</p>
+                </div>
+                <div class="fact">
+                    <img src="images/icons/email.png" alt="">
+                    <h3 class="fact-title">22578</h3>
+                    <p class="fact-info">Email Send</p>
+                </div>
+            </div>
+        </section>
+        <section class="sponsors">
+            <div class="sponsors-details">
+                <h3 class="sponsors-details-title">Our Sponsors</h3>
+                <p class="sponsors-details-info">There are many variations of passages of Lorem Ipsum available, but
+                    <br> the
+                    majority have suffered
+                    alteration.
+                </p>
+            </div>
+            <div class="sponsor-image">
+                <img src="images/sponsors/spotify.png" alt="">
+                <img src="images/sponsors/amazon.png" alt="">
+                <img src="images/sponsors/google.png" alt="">
+                <img src="images/sponsors/telerama.png" alt="">
+                <img src="images/sponsors/figma.png" alt="">
+            </div>
+        </section>
     </main>
 </body>
 
