done without responsive

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment-2::Create a responsive G3-Architects website</title>
+    <!-- font Awesome -->
+    <script src="https://kit.fontawesome.com/1e887a551d.js" crossorigin="anonymous"></script>
+
     <!-- CSS Added -->
     <link rel="stylesheet" href="style.css">
 </head>
@@ -145,14 +148,95 @@
                 </div>
             </div>
         </section>
-        <section class="sponsors">
-            <div class="sponsors-details">
-                <h3 class="sponsors-details-title">Our Sponsors</h3>
-                <p class="sponsors-details-info">There are many variations of passages of Lorem Ipsum available, but
+        <section class="clients-container">
+            <div class="clients-details">
+                <h3 class="clients-details-title">Our Clients Feedback</h3>
+                <p class="clients-details-info">There are many variations of passages of Lorem Ipsum available, but
                     <br> the
                     majority have suffered
                     alteration.
                 </p>
+            </div>
+            <div class="clients-feedback">
+                <div class="client-feedback">
+                    <img src="images/clients/player-1.png" alt="">
+                    <h3 class="client-name">Mr. Asaduzzaman</h3>
+                    <p class="clients-feedback-info">Lorem ipsum dolor sit amet consectetur adipisicing</p>
+                    <div class="fontawesome-icon">
+                        <i class="fa-solid fa-star filled"></i>
+                        <i class="fa-solid fa-star filled"></i>
+                        <i class="fa-solid fa-star filled"></i>
+                        <i class="fa-solid fa-star filled"></i>
+                        <i class="fa-solid fa-star empty"></i>
+                    </div>
+                </div>
+                <div class="client-feedback">
+                    <img src="images/clients/player-2.png" alt="">
+                    <h3 class="client-name">Mr. Asaduzzaman</h3>
+                    <p class="clients-feedback-info">Lorem ipsum dolor sit amet consectetur adipisicing</p>
+                    <div class="fontawesome-icon">
+                        <i class="fa-solid fa-star filled"></i>
+                        <i class="fa-solid fa-star filled"></i>
+                        <i class="fa-solid fa-star filled"></i>
+                        <i class="fa-solid fa-star filled"></i>
+                        <i class="fa-solid fa-star empty"></i>
+                    </div>
+                </div>
+                <div class="client-feedback">
+                    <img src="images/clients/player-3.png" alt="">
+                    <h3 class="client-name">Mr. Farid Ahmed</h3>
+                    <p class="clients-feedback-info">Lorem ipsum dolor sit amet consectetur adipisicing</p>
+                    <div class="fontawesome-icon">
+                        <i class="fa-solid fa-star filled"></i>
+                        <i class="fa-solid fa-star filled"></i>
+                        <i class="fa-solid fa-star filled"></i>
+                        <i class="fa-solid fa-star filled"></i>
+                        <i class="fa-solid fa-star empty"></i>
+                    </div>
+                </div>
+                <div class="client-feedback">
+                    <img src="images/clients/player-4.png" alt="">
+                    <h3 class="client-name">Mr. Amir Khan</h3>
+                    <p class="clients-feedback-info">Lorem ipsum dolor sit amet consectetur adipisicing</p>
+                    <div class="fontawesome-icon">
+                        <i class="fa-solid fa-star filled"></i>
+                        <i class="fa-solid fa-star filled"></i>
+                        <i class="fa-solid fa-star filled"></i>
+                        <i class="fa-solid fa-star filled"></i>
+                        <i class="fa-solid fa-star empty"></i>
+                    </div>
+                </div>
+                <div class="client-feedback">
+                    <img src="images/clients/player-5.png" alt="">
+                    <h3 class="client-name">Mr. Kobir Hossain</h3>
+                    <p class="clients-feedback-info">Lorem ipsum dolor sit amet consectetur adipisicing</p>
+                    <div class="fontawesome-icon">
+                        <i class="fa-solid fa-star filled"></i>
+                        <i class="fa-solid fa-star filled"></i>
+                        <i class="fa-solid fa-star filled"></i>
+                        <i class="fa-solid fa-star filled"></i>
+                        <i class="fa-solid fa-star empty"></i>
+                    </div>
+                </div>
+                <div class="client-feedback">
+                    <img src="images/clients/player-6.png" alt="">
+                    <h3 class="client-name">Mr. Mahmud Hasan</h3>
+                    <p class="clients-feedback-info">Lorem ipsum dolor sit amet consectetur adipisicing</p>
+                    <div class="fontawesome-icon">
+                        <i class="fa-solid fa-star filled"></i>
+                        <i class="fa-solid fa-star filled"></i>
+                        <i class="fa-solid fa-star filled"></i>
+                        <i class="fa-solid fa-star filled"></i>
+                        <i class="fa-solid fa-star empty"></i>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+        <section class="sponsors">
+            <div class="sponsors-details">
+                <h3 class="sponsors-details-title">Our Sponsors</h3>
+                <p class="clients-feedback-info">Lorem ipsum dolor sit amet consectetur adipisicing</p>
             </div>
             <div class="sponsor-image">
                 <img src="images/sponsors/spotify.png" alt="">
@@ -164,5 +248,8 @@
         </section>
     </main>
 </body>
+<footer>
+    <p>All rights reserved copyright@2023 startup landing page design by Mahmud Hasan</p>
+</footer>
 
 </html>
