transition & transform added in some fact section

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <title>Assignment-2::Create a responsive G3-Architects website</title>
     <!-- font Awesome -->
     <script src="https://kit.fontawesome.com/1e887a551d.js" crossorigin="anonymous"></script>
-
     <!-- CSS Added -->
     <link rel="stylesheet" href="style.css">
 </head>
@@ -151,7 +150,7 @@
         <section class="clients-container">
             <div class="clients-details">
                 <h3 class="clients-details-title">Our Clients Feedback</h3>
-                <p class="clients-details-info">There are many variations of passages of Lorem Ipsum available, but
+                <p class="banner-info">There are many variations of passages of Lorem Ipsum available, but
                     <br> the
                     majority have suffered
                     alteration.
@@ -230,13 +229,12 @@
                         <i class="fa-solid fa-star empty"></i>
                     </div>
                 </div>
-
             </div>
         </section>
         <section class="sponsors">
             <div class="sponsors-details">
                 <h3 class="sponsors-details-title">Our Sponsors</h3>
-                <p class="clients-feedback-info">Lorem ipsum dolor sit amet consectetur adipisicing</p>
+                <p class="banner-info">Lorem ipsum dolor sit amet consectetur adipisicing</p>
             </div>
             <div class="sponsor-image">
                 <img src="images/sponsors/spotify.png" alt="">
