--- a/index.html
+++ b/index.html
@@ -30,14 +30,13 @@
 
     <!-- Banner Start -->
     <div class="banner-container">
-        <h1 class="banner-title">
-            Brand New <br> Group of Architects
+        <h1 class="banner-title">Brand New<br>Group of Architects
         </h1>
         <p class="banner-info">There are many variations of passages of Lorem Ipsum available, but the majority have
             <br> suffered alteration in some form, by injected humour, or randomised words which don't look even
         </p>
         <button class="banner-btn">Explore More</button>
-        <img class="img-fluid" src="images/banner.png" alt="">
+        <img src="images/banner.png" alt="">
     </div>
     <!-- Banner End -->
 </header>
@@ -45,7 +44,7 @@
 
 <body>
     <main>
-        <section class="quick-list-features">
+        <section class="quick-list-features container">
             <div class="feature">
                 <img src="images/team1.png" alt="">
                 <img src="images/team2.png" alt="">
@@ -77,7 +76,6 @@
                         majority have suffered alteration in some form, by <br> injected humour, or
                         randomised...........
                     </p>
-
                 </div>
                 <div class="features-love-enjoy-description">
                     <h3 class="features-love-enjoy-description-title">Drag & Drop Builder</h3>
@@ -87,7 +85,6 @@
                         majority have suffered alteration in some form, by <br> injected humour, or
                         randomised...........
                     </p>
-
                 </div>
                 <div class="features-love-enjoy-description">
                     <h3 class="features-love-enjoy-description-title">Awesome Modern Design</h3>
@@ -97,7 +94,6 @@
                         majority have suffered alteration in some form, by <br> injected humour, or
                         randomised...........
                     </p>
-
                 </div>
                 <div class="features-love-enjoy-description">
                     <h3 class="features-love-enjoy-description-title">Super Easy to Edit</h3>
@@ -107,11 +103,10 @@
                         majority have suffered alteration in some form, by <br> injected humour, or
                         randomised...........
                     </p>
-
                 </div>
             </div>
             <div class="features-love-enjoy-banner">
-                <img src="images/architect.png" alt="">
+                <img style="width: 100%;" src="images/architect.png" alt="">
                 <button class="banner-btn"><span style="font-weight: 700;
                     font-size: 65px;">10+Year</span> <br><span style="font-weight: 500;
                     font-size: 25px;"> Experience</span></button>
@@ -234,7 +229,8 @@
         <section class="sponsors">
             <div class="sponsors-details">
                 <h3 class="sponsors-details-title">Our Sponsors</h3>
-                <p class="banner-info">Lorem ipsum dolor sit amet consectetur adipisicing</p>
+                <p class="banner-info">There are many variations of passages of Lorem Ipsum available, but <br> the
+                    majority have suffered alteration.</p>
             </div>
             <div class="sponsor-image">
                 <img src="images/sponsors/spotify.png" alt="">
