--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             </div>
             <div class="features-love-enjoy-banner">
                 <img style="width: 100%;" src="images/architect.png" alt="">
-                <button class="banner-btn"><span style="font-weight: 700;
+                <button class="features-love-enjoy-btn"><span style="font-weight: 700;
                     font-size: 65px;">10+Year</span> <br><span style="font-weight: 500;
                     font-size: 25px;"> Experience</span></button>
             </div>
